commit mantenciones usuario y css varios

--- a/Project_d/app/templates/mantencion.html
+++ b/Project_d/app/templates/mantencion.html
@@ -42,9 +42,9 @@
         </div>
     </div>
 </div>
+<script src="/assets/js/obtenerVehiculos.js"></script> 
+<script src="/assets/js/horasFechas.js"></script> 
 
-<script src="assets/js/obtenerVehiculos.js"></script> 
-<script src="assets/js/horasFechas.js"></script> 
 <!-- Bootstrap JS Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
