--- a/Project_d/app/templates/rolUser.html
+++ b/Project_d/app/templates/rolUser.html
@@ -1,4 +1,7 @@
 <link href="/assets/css/modal.css" rel="stylesheet">
+<link href="/assets/css/rolUser.css" rel="stylesheet">
+
+
 <table id="tabla-rol">
     <thead>
       <tr>
