--- a/Project_d/app/templates/mantenciones.html
+++ b/Project_d/app/templates/mantenciones.html
@@ -1,4 +1,5 @@
 <link href="/assets/css/modal.css" rel="stylesheet">
+<link href="/assets/css/mantenciones.css" rel="stylesheet">
 <table id="tabla-mantenciones">
     <thead>
       <tr>
