commit, home, navbar, footer, cuenta

--- a/Project_d/app/templates/assets/css/mantencionesu.css
+++ b/Project_d/app/templates/assets/css/mantencionesu.css
@@ -39,3 +39,10 @@
 #tablaMantenciones tr:hover {
     background-color: #ddd; /* Color de fondo al pasar el mouse */
 }
+
+footer {
+    /* Estilo para el footer */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
